# armor_detector

./: .gitattributes  .gitignore  README.md
log/: latest_build
src/armor_dector/: CMakeLists.txt  README.md  new.avi  package.xml
src/armor_dector/include/armor_detector/: armor_detector.hpp
src/armor_dector/src/: armor_detector.cpp  armor_detector_node.cpp  video_publisher.cpp
src/config/: armor_params.yaml
src/log/: latest_build
